--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@ title: 404
 ---
 
 <p><strong>Page not found :(</strong></p>
-<p>The requested page could not be found.</p>
+<p>Sorry, looks like you tried to go to a page that does not exist 😔</p>
